[package]
name        = "st-render"
description = "smedja: wgpu cell-grid renderer with glyph atlas"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[features]
gpu-tests = []

[dependencies]
anyhow       = { workspace = true }
bytemuck     = { version = "1", features = ["derive"] }
cosmic-text  = { workspace = true }
image        = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
parking_lot  = { workspace = true }
st-config    = { path = "../st-config" }
st-glyph     = { path = "../st-glyph" }
st-statusbar = { path = "../st-statusbar" }
thiserror    = { workspace = true }
tracing      = { workspace = true }
wgpu         = { workspace = true }
winit        = { workspace = true }

[dev-dependencies]
tracing-test = "0.2"
